# ctest_example

./: CMakeLists.txt  README.md  my_math.cpp  my_math.h  sum_int.cpp  sum_int_test.cpp
